Updated launcher script